# llm

./: .gitignore  .python-version  LICENSE  README.md  data_generation.py  main.ipynb  main.py  pyproject.toml
com/model/flava/: Flava.py  FlavaUtils.py
docs/: 0917.md  Meeting.10.08.md  Meeting0815.md  crossrel_task.md  markdown-origin.md  meeting0815_self.md  modelSum.md  model_draft.md
docs/meeting/: 20250815.md
docs/model/: CLIP.md  FLAVA.md
