[project]
name = "llm-app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchtext>=0.18.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.1",
]
